2009-12-09  Marwan Al Jubeh  <marwan.aljubeh@gmail.com>

        Reviewed by Adam Roben.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=31228
        Set the WebKitOutputDir, WebKitLibrariesDir and Cygwin environment variables automatically
        in Windows as part of running update_webkit.

        * Scripts/update-webkit:
         - Run setupAppleWinEnv() on Apple's Windows port.
        * Scripts/webkitdirs.pm:
         - Added functions that return the source directory, libraries directory and default build directory on Windows.
         - Added isWindowsNT() which tests if the current Windows version is from the Windows NT family.
         - Implemented setupAppleWinEnv() which sets the environment variables WebKitOutputDir, WebKitLibrariesDir
           and Cygwin to their desired values.

2009-12-09  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        exception thrown when running apply-patches
        https://bugs.webkit.org/show_bug.cgi?id=32344

        The update step now takes a port option.  Once we finish the Steps
        refactoring, we won't have to worry about this kind of bug again.

        * Scripts/modules/commands/download.py:

2009-12-09  Adam Barth  <abarth@webkit.org>

        Unreviewed.  Fix ScriptError includes.  I don't understand why these
        didn't throw during unit testing...

        * Scripts/modules/commands/download.py:
        * Scripts/modules/logging_unittest.py:
        * Scripts/modules/workqueue.py:

2009-12-09  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Remove unused PatchCollection class
        https://bugs.webkit.org/show_bug.cgi?id=32312

        It's dead code.

        * Scripts/modules/patchcollection.py:
        * Scripts/modules/patchcollection_unittest.py: Removed.

2009-12-09  Adam Barth  <abarth@webkit.org>

        Unreviewed "build" fix.  CheckStyle needs a --no-upate option.

        * Scripts/modules/commands/download.py:
