@@ -1,3 +1,12 @@
+2009-12-10  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
+        bugzilla-tool "builders are red" error should tell you which builders
+        https://bugs.webkit.org/show_bug.cgi?id=32211
+
+        * Scripts/modules/buildsteps.py:
+
 2009-12-09  Marwan Al Jubeh  <marwan.aljubeh@gmail.com>
 
         Reviewed by Adam Roben.
